# Kora

./: .claude-tasks.md  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  README.md  SECURITY.md  bench-docker.sh  bench-memtier.sh  docker-compose.yml  kora-doc-arch.md
.github/workflows/: ci.yml  perf.yml  release.yml
aws/: bench-native.sh  provision-loadgen.sh  provision-server.sh  setup-bench.sh
benchmarks/: aws-m5-large-results.md
docs/: redis-parity-matrix.md
docs/plans/: 2026-03-07-phase5-integration-depth-design.md  2026-03-07-phase6-redis-compat-multitenancy-design.md  2026-03-07-phase7-full-sweep-design.md  2026-03-07-phase8-10-redis-replacement.md  2026-03-07-pubsub-design.md  2026-03-07-pubsub-implementation.md  2026-03-09-doc-indexing.md  2026-03-09-redis-compat-commands.md
docs/superpowers/plans/: 2026-03-10-doc-query-enhancements.md
kora-cdc/: Cargo.toml
kora-cdc/src/: consumer.rs  lib.rs  ring.rs  subscription.rs
kora-cli/: Cargo.toml
kora-cli/src/: config.rs  main.rs
kora-core/: Cargo.toml
kora-core/benches/: engine.rs
kora-core/src/: command.rs  error.rs  hash.rs  lib.rs  slab.rs  tenant.rs
kora-core/src/shard/: allocator.rs  engine.rs  migration.rs  mod.rs  store.rs  wal_trait.rs
kora-core/src/shard/store/: hash_commands.rs  list_commands.rs
kora-core/src/sim/: clock.rs  mod.rs  network.rs  scheduler.rs
kora-core/src/types/: key.rs  mod.rs  value.rs
kora-core/tests/: stress.rs
kora-doc/: Cargo.toml
kora-doc/src/: collection.rs  decompose.rs  dictionary.rs  engine.rs  expr.rs  index.rs  key.rs  lib.rs  packed.rs  recompose.rs  registry.rs
kora-embedded/: Cargo.toml
kora-embedded/src/: lib.rs
kora-observability/: Cargo.toml
kora-observability/src/: histogram.rs  lib.rs  prometheus.rs  sketch.rs  stats.rs  trie.rs
kora-protocol/: Cargo.toml
kora-protocol/benches/: resp.rs
kora-protocol/src/: command.rs  error.rs  lib.rs  memcache.rs  parser.rs  resp.rs  serializer.rs
kora-protocol/src/command/: blocking_parsing.rs  doc_parsing.rs
kora-protocol/tests/: stress.rs
kora-pubsub/: Cargo.toml
kora-pubsub/benches/: pubsub.rs
kora-pubsub/src/: broker.rs  glob.rs  lib.rs  message.rs
kora-scripting/: Cargo.toml
kora-scripting/src/: host.rs  lib.rs
kora-server/: Cargo.toml
kora-server/src/: lib.rs
kora-server/src/shard_io/: connection.rs  dispatch.rs  memcache.rs  mod.rs  stage_metrics.rs
kora-server/tests/: integration.rs  memcached_integration.rs  real_app_traffic.rs  redis_comparison.rs  redis_compat.rs  redis_compat_advanced.rs  redis_compat_collections.rs
kora-server/tests/test_support/: mod.rs
kora-storage/: Cargo.toml
kora-storage/src/: backend.rs  compressor.rs  error.rs  iouring.rs  lib.rs  manager.rs  rdb.rs  shard_storage.rs  uring_backend.rs  wal.rs  warm_tier.rs
kora-vector/: Cargo.toml
kora-vector/benches/: hnsw.rs
kora-vector/src/: distance.rs  hnsw.rs  lib.rs  quantizer.rs
