[workspace]
resolver = "2"
members = [
    "kora-core",
    "kora-protocol",
    "kora-server",
    "kora-embedded",
    "kora-storage",
    "kora-vector",
    "kora-cdc",
    "kora-observability",
    "kora-pubsub",
    "kora-doc",
    "kora-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"
repository = "https://github.com/Augani/Kora"
homepage = "https://github.com/Augani/Kora"
keywords = ["cache", "database", "resp", "embedded", "multi-threaded"]
categories = ["database-implementations", "caching"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Buffers & bytes
bytes = "1"
memchr = "2"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Hashing
ahash = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage
lz4_flex = "0.11"
crc32fast = "1"
memmap2 = "0.9"
io-uring = "0.7"

# Observability
hdrhistogram = "7"

# HTTP (metrics endpoint)
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Vector math
ordered-float = "4"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"

# Workspace crates
kora-core = { path = "kora-core", version = "0.2.0" }
kora-protocol = { path = "kora-protocol", version = "0.2.0" }
kora-server = { path = "kora-server", version = "0.2.0" }
kora-embedded = { path = "kora-embedded", version = "0.2.0" }
kora-storage = { path = "kora-storage", version = "0.2.0" }
kora-vector = { path = "kora-vector", version = "0.2.0" }
kora-cdc = { path = "kora-cdc", version = "0.2.0" }

kora-observability = { path = "kora-observability", version = "0.2.0" }
kora-pubsub = { path = "kora-pubsub", version = "0.2.0" }
kora-doc = { path = "kora-doc", version = "0.2.0" }
koracli = { path = "kora-cli", version = "0.2.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
