[package]
name = "kora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI binary and server entrypoint for Kōra"

[[bin]]
name = "kora"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
kora-server.workspace = true
kora-storage.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
