[package]
name = "kora-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core data structures, shard engine, and memory management for Kōra"

[dependencies]
ahash.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
kora-observability = { workspace = true, optional = true }

[features]
default = ["observability"]
observability = ["dep:kora-observability"]

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "engine"
harness = false
