[package]
name = "kora-embedded"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Embeddable library mode for Kōra — use as a direct API without a network layer"
repository.workspace = true

[dependencies]
kora-core.workspace = true
kora-doc.workspace = true
kora-storage.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }
kora-server = { workspace = true, optional = true }
serde_json = "1"

[features]
default = []
server = ["dep:kora-server", "dep:tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
