[package]
name = "kora-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Per-key stats, hot-key detection, and memory attribution for Kōra"
repository.workspace = true

[dependencies]
hdrhistogram.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
