[package]
name = "kora-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "RESP2/RESP3 protocol parser and serializer for Kōra"

[dependencies]
bytes.workspace = true
kora-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "resp"
harness = false
