[package]
name = "kora-scripting"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM scripting runtime for server-side functions in Kōra"

[dependencies]
kora-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmtime.workspace = true
