[package]
name = "kora-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "TCP/Unix socket server, connection handling, and command dispatch for Kōra"

[dependencies]
bytes.workspace = true
kora-core.workspace = true
kora-protocol.workspace = true
kora-pubsub.workspace = true
kora-storage.workspace = true
kora-cdc.workspace = true
kora-scripting.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
kora-observability.workspace = true
parking_lot.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
rand.workspace = true
