[package]
name = "kora-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HNSW vector index and similarity search for Kōra"

[dependencies]
ordered-float.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "hnsw"
harness = false
